// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Encode & Decode references encode - citegroup and references 1`] = `
"<article itemtype=\\"https://schema.org/Article\\" itemscope=\\"true\\">
  <h1 itemprop=\\"headline\\">An example of using the CiteGroup node type</h1>
  <div>
    <ol class=\\"authors\\">
      <li itemtype=\\"https://schema.org/Person\\" itemscope=\\"true\\" itemprop=\\"author\\"><span itemprop=\\"name\\" content=\\"Joe Bloggs\\"><span itemprop=\\"givenName\\">Joe</span><span itemprop=\\"familyName\\">Bloggs</span></span></li>
    </ol>
  </div>
  <p>Citing two articles <span itemtype=\\"https://schema.stenci.la/CiteGroup\\"><cite><a href=\\"#some-one-else-1991\\">some-one-else-1991</a></cite><cite><a href=\\"#updated-works-2009\\">updated-works-2009</a></cite><cite><a href=\\"https://www.fullUrl.com\\">https://www.fullUrl.com</a></cite></span>.</p>
  <section>
    <h2>References</h2>
    <ol class=\\"references\\">
      <li id=\\"some-one-else-1991\\" itemtype=\\"https://schema.org/CreativeWork\\" itemscope=\\"true\\" itemprop=\\"citation\\"><span itemprop=\\"headline\\">Another article by someone else</span>
        <div>
          <ol class=\\"authors\\">
            <li itemtype=\\"https://schema.org/Person\\" itemscope=\\"true\\" itemprop=\\"author\\"><span itemprop=\\"name\\" content=\\"Some One Else\\"><span itemprop=\\"givenName\\">Some
                  One</span><span itemprop=\\"familyName\\">Else</span></span></li>
          </ol>
        </div><time itemprop=\\"datePublished\\" datetime=\\"1991\\">1991</time>
      </li>
      <li id=\\"update-works-2009\\" itemtype=\\"https://schema.org/CreativeWork\\" itemscope=\\"true\\" itemprop=\\"citation\\"><span itemprop=\\"headline\\">A Better Updated Work</span>
        <div>
          <ol class=\\"authors\\">
            <li itemtype=\\"https://schema.org/Person\\" itemscope=\\"true\\" itemprop=\\"author\\"><span itemprop=\\"name\\" content=\\"Some Better Person\\"><span itemprop=\\"givenName\\">Some
                  Better</span><span itemprop=\\"familyName\\">Person</span></span></li>
          </ol>
        </div><time itemprop=\\"datePublished\\" datetime=\\"2009\\">2009</time>
      </li>
    </ol>
  </section>
</article>"
`;

exports[`Handle inline elements in Article description does not nest inline elements inside extra paragraphs 1`] = `
"<section data-itemprop=\\"description\\">
    <h2 data-itemtype=\\"http://schema.stenci.la/Heading\\">Abstract</h2>
    <meta itemprop=\\"description\\" content=\\"Paragraph with  a link and let's throw in our 1 st superscript shall we?\\">
    <p itemscope=\\"\\" itemtype=\\"http://schema.stenci.la/Paragraph\\">Paragraph with <a href=\\"http://stenci.la\\" itemscope=\\"\\" itemtype=\\"http://schema.stenci.la/Link\\">a link</a>and
      let's throw in our 1<sup itemscope=\\"\\" itemtype=\\"http://schema.stenci.la/Superscript\\">st</sup>superscript shall we?</p>
  </section>"
`;

exports[`Handle inline elements in Article description does not wrap the description if it is already a paragraph 1`] = `
"<section data-itemprop=\\"description\\">
    <h2 data-itemtype=\\"http://schema.stenci.la/Heading\\">Abstract</h2>
    <meta itemprop=\\"description\\" content=\\"Paragraph with a linkand let's throw in our 1stsuperscript shall we?\\">
    <p itemscope=\\"\\" itemtype=\\"http://schema.stenci.la/Paragraph\\">Paragraph with <a href=\\"http://stenci.la\\" itemscope=\\"\\" itemtype=\\"http://schema.stenci.la/Link\\">a link</a>and
      let's throw in our 1<sup itemscope=\\"\\" itemtype=\\"http://schema.stenci.la/Superscript\\">st</sup>superscript shall we?</p>
  </section>"
`;
